# profile.mobile.apps.native.ug-gallery-efl

./: .cproject  .project  CMakeLists.txt  org.tizen.ug-gallery-efl-1.0.0-arm.tpk  org.tizen.ug-gallery-efl-1.0.0-arm_debug.tpk  org.tizen.ug-gallery-efl-1.0.0-i386.tpk  org.tizen.ug-gallery-efl-1.0.0-i386_debug.tpk  project_def.prop  tizen-manifest.xml  ug-gallery-efl.manifest.xml  ug-gallery-efl.xml  ug.gallery-efl.include
inc/: gallery-efl.h  ge-albums.h  ge-button.h  ge-db-update.h  ge-debug.h  ge-exif.h  ge-ext-ug-load.h  ge-icon.h  ge-lang.h  ge-main-view.h  ge-nocontent.h  ge-strings.h  ge-tile.h  ge-ugdata.h  ge-ui-util.h  ge-util.h
include/: gallery-efl.h  ge-albums.h  ge-button.h  ge-data-type.h  ge-data-util.h  ge-data.h  ge-db-update.h  ge-debug.h  ge-ext-exec.h  ge-ext-ug-load.h  ge-file-util.h  ge-gridview.h  ge-icon.h  ge-lang.h  ge-local-data.h  ge-main-view.h  ge-rotate-bg.h  ge-thumb.h  ge-tile.h  ge-ugdata.h  ge-ui-util.h  ge-util.h
packaging/: org.tizen.ug-gallery-efl.spec  ug-gallery-efl.spec
res/black_theme/edc/: gallery-efl-check.edc  gallery-efl-edc-res.h  gallery-efl-expanded-title.edc  gallery-efl-gengrid-item-albums.edc  gallery-efl-nocontents.edc  gallery-efl.edc
res/black_theme/images_edc/: gallery-efl-images.edc
res/edje/: gallery-efl-gengrid-item-thumbview.edc  gallery-efl-gengrid.edc
res/po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  mn_MN.po  (+24 more)
src/: CMakeLists.txt  gallery-efl.c
src/data/: ge-data-type.c  ge-data-util.c  ge-data.c  ge-local-data.c
src/util/: ge-db-update.c  ge-debug.c  ge-exif.c  ge-ext-exec.c  ge-ext-ug-load.c  ge-file-util.c  ge-lang.c  ge-ui-util.c  ge-util.c
src/view/: ge-albums.c  ge-gridview.c  ge-main-view.c
src/widget/: ge-button.c  ge-nocontent.c  ge-rotate-bg.c  ge-thumb.c  ge-tile.c
